@@ -35,6 +35,7 @@ import jakarta.el.FunctionMapper;
 import jakarta.el.VariableMapper;
 
 import java.lang.System.Logger;
+import java.lang.reflect.InvocationTargetException;
 
 public class VRContext extends ELContext {
 
@@ -82,13 +83,21 @@ public class VRContext extends ELContext {
 
     try {
       clazz = Class.forName(classname);
-      instance = clazz.newInstance();
+      instance = clazz.getConstructor().newInstance();
     } catch (ClassNotFoundException cnfe) {
       logger.log(Logger.Level.ERROR, "ClassNotFoundException: " + cnfe.getMessage());
     } catch (InstantiationException ie) {
       logger.log(Logger.Level.ERROR, "InstantiationException: " + ie.getMessage());
     } catch (IllegalAccessException iae) {
       logger.log(Logger.Level.ERROR, "IllegalAccessException: " + iae.getMessage());
+    } catch (IllegalArgumentException e) {
+      logger.log(Logger.Level.ERROR, "IllegalArgumentException: " + e.getMessage());
+    } catch (InvocationTargetException e) {
+      logger.log(Logger.Level.ERROR, "InvocationTargetException: " + e.getMessage());
+    } catch (NoSuchMethodException e) {
+      logger.log(Logger.Level.ERROR, "NoSuchMethodException: " + e.getMessage());
+    } catch (SecurityException e) {
+      logger.log(Logger.Level.ERROR, "SecurityException: " + e.getMessage());
     }
     return instance;
   }
